create send-feedback-mail route and update the docs
